crates/mabo-doc/tests/snapshots/render__render@types_generic.mabo.snap
---
source: crates/mabo-doc/tests/render.rs
description: "struct Sample {\n    f1: Vec<u32> @1,\n    f2: HashMap<u32, String> @2,\n    f3: HashSet<u32> @3,\n    f4: Option<u32> @4,\n    f5: NonZero<u32> @5,\n}\n\nstruct SampleUnnamed(\n    Vec<u32> @1,\n    HashMap<u32, String> @2,\n    HashSet<u32> @3,\n    Option<u32> @4,\n    NonZero<u32> @5,\n)"
input_file: crates/mabo-parser/tests/inputs/types_generic.mabo
---
--- types_generic/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>types_generic - Mabo</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema types_generic</h2>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.Sample.html">Sample</a>
      </td>
      <td>
        
      </td>
    </tr>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.SampleUnnamed.html">SampleUnnamed</a>
      </td>
      <td>
        
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- types_generic/struct.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Mabo</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">types_generic</a>::<span class="name-struct">Sample</span>
  </h2>
  <pre class="item-definition my-2">struct Sample {
    f1: Vec&lt;u32&gt; @1,
    f2: HashMap&lt;u32, String&gt; @2,
    f3: HashSet&lt;u32&gt; @3,
    f4: Option&lt;u32&gt; @4,
    f5: NonZero&lt;u32&gt; @5,
}</pre>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">6</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">f1</span>:
        <span class="field-type">Vec&lt;u32&gt;</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>Vec</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f2</span>:
        <span class="field-type">HashMap&lt;u32, String&gt;</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>HashMap</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>key: <strong>u32</strong> <code>1..5</code></li>
          <li>value: <strong>String</strong> <code>1..</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f3</span>:
        <span class="field-type">HashSet&lt;u32&gt;</span>
        <span class="field-id">@3</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>HashSet</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f4</span>:
        <span class="field-type">Option&lt;u32&gt;</span>
        <span class="field-id">@4</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>Option</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f5</span>:
        <span class="field-type">NonZero&lt;u32&gt;</span>
        <span class="field-id">@5</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>

--- types_generic/struct.SampleUnnamed.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>SampleUnnamed - Mabo</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">types_generic</a>::<span class="name-struct">SampleUnnamed</span>
  </h2>
  <pre class="item-definition my-2">struct SampleUnnamed(Vec&lt;u32&gt; @1, HashMap&lt;u32, String&gt; @2, HashSet&lt;u32&gt; @3, Option&lt;u32&gt; @4, NonZero&lt;u32&gt; @5)</pre>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">6</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">n0</span>:
        <span class="field-type">Vec&lt;u32&gt;</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>Vec</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">n1</span>:
        <span class="field-type">HashMap&lt;u32, String&gt;</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>HashMap</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>key: <strong>u32</strong> <code>1..5</code></li>
          <li>value: <strong>String</strong> <code>1..</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">n2</span>:
        <span class="field-type">HashSet&lt;u32&gt;</span>
        <span class="field-id">@3</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>HashSet</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">n3</span>:
        <span class="field-type">Option&lt;u32&gt;</span>
        <span class="field-id">@4</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>Option</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">n4</span>:
        <span class="field-type">NonZero&lt;u32&gt;</span>
        <span class="field-id">@5</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>NonZero</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>u32</strong> <code>1..5</code></li>
          </ul>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
